SmartHome Companion: auto adjust font size of the menu based on the screen size

--- a/smarthome_companion/src/main/res/layout/list_control.xml
+++ b/smarthome_companion/src/main/res/layout/list_control.xml
@@ -7,6 +7,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/control_display"
+        style="@android:style/TextAppearance.DeviceDefault.Medium"
         android:padding="4dp" />
 
 </RelativeLayout>
